--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "app04-graphql-api",
+  "name": "api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "gpablosl <gpablosleon15@gmail.com>",
@@ -23,13 +21,14 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
     "express-graphql": "^0.11.0",
     "graphql": "^15.4.0",
     "graphql-upload": "^11.0.0",
     "mongoose": "^5.10.15",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
-    "nodemon": "^2.0.4",
+    "nodemon": "^2.0.6",
     "npm": "^6.14.8",
     "require": "^2.4.20",
     "requirejs": "^2.3.6",
